[package]
name = "openlibrary"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
const_format = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0"
smallvec = { version = "1.10", features = ["serde", "union", "const_generics", "const_new"] }
smallvec-map = {"git" = "https://github.com/emily-signet/smallvec-map.git"}
